--- a/package.json
+++ b/package.json
@@ -15,33 +15,33 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.10",
-    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
-    "expo": "~53.0.7",
-    "expo-blur": "~14.1.4",
+    "expo": "53.0.12",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
-    "expo-linking": "~7.1.4",
+    "expo-image": "~2.3.0",
+    "expo-linking": "~7.1.5",
     "expo-localization": "~16.1.5",
-    "expo-notifications": "~0.31.2",
-    "expo-router": "~5.0.5",
-    "expo-splash-screen": "~0.30.8",
+    "expo-notifications": "~0.31.3",
+    "expo-router": "~5.1.0",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "firebase": "^11.6.1",
     "i18next": "^25.1.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.5.1",
-    "react-native": "0.79.2",
+    "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
