--- a/package.json
+++ b/package.json
@@ -19,20 +19,23 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
-    "expo": "53.0.19",
+    "expo": "53.0.20",
+    "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.6",
+    "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
+    "expo-facebook": "^12.2.0",
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.0",
+    "expo-image": "~2.4.0",
     "expo-linking": "~7.1.5",
     "expo-localization": "~16.1.5",
-    "expo-notifications": "~0.31.3",
-    "expo-router": "~5.1.0",
+    "expo-notifications": "~0.31.4",
+    "expo-router": "~5.1.4",
     "expo-sharing": "~13.1.5",
+    "expo-speech": "~13.1.7",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -53,8 +56,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^3.4.17",
-    "expo-speech": "~13.1.7"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
